--- a/Deployment/app.yaml
+++ b/Deployment/app.yaml
@@ -13,7 +13,7 @@ spec:
         name: javawebapp
     spec:
       containers:
-      - image: ravikumara0004/app3:v1
+      - image: shivakumarveerapur124/app1
         name: javawebapp
         ports:
         - name: javawebapp
