--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -7,5 +7,5 @@ on:
 jobs:
 
   call-worlflow-using-branch:
-    uses: ravikumara004/sample-app/.github/workflows/docker.yaml@main
+    uses: ravikumara004/sample-app/.github/workflows/docker.yml@main
     
