--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,5 +17,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        echo "i'm on main"
+        echo "i'm on main sampleapp"
       
