--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        echo "i'm on main sampleapp"
+        echo "i'm on new feature branch sampleapp"
       
