--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,11 +1,50 @@
-name: call docker workflow
+name: Update PR Body
 
 on:
-  push:
-    branches: [ "main" ]
-
+  workflow_dispatch:
+    inputs:
+      Pr_Number:
+        description: 'Pull Request Number'
+        required: true
+      Cytric_Version:
+        description: 'Cytric Version'
+        required: true
+      Search_Version:
+        description: 'SearchApp Version'
+        required: true
+      Repository:
+        description: 'Repository Name'
+        required: true
 jobs:
-
-  call-worlflow-using-branch:
-    uses: ravikumara004/sample-app/.github/workflows/docker.yml@main
-    
+  update-pr-body:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        
+      - name: Update PR Body with PrNumber, DistributedVersion, SearchAppVersion
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const Pr_Number = core.getInput('Pr_Number');
+            const Cytric_Version = core.getInput('Cytric_Version');
+            const Search_Version = core.getInput('Search_Version');
+            const Repository = core.getInput('Repository');
+            
+            // Fetch the pull request details
+            const { data: pullRequest } = await github.rest.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: Pr_Number,
+            });
+ 
+            // Construct the new body for the PR
+            const newBody = `${pullRequest.body}\n\nUpdated Cytric_Version: ${Cytric_Version}\nUpdated SearchApp_Version: ${Search_Version}\nUpdated Repository: ${Repository}`;
+            
+            // Update the pull request body
+            await github.rest.pulls.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: Pr_Number,
+              body: newBody
+            });
