--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -6,15 +6,15 @@ on:
       Pr_Number:
         description: 'Pull Request Number'
         required: true
-      Cytric_Version:
-        description: 'Cytric Version'
-        required: true
-      Search_Version:
-        description: 'SearchApp Version'
-        required: true
-      Repository:
-        description: 'Repository Name'
-        required: true
+      # Cytric_Version:
+      #   description: 'Cytric Version'
+      #   required: true
+      # Search_Version:
+      #   description: 'SearchApp Version'
+      #   required: true
+      # Repository:
+      #   description: 'Repository Name'
+      #   required: true
 jobs:
   update-pr-body:
     runs-on: ubuntu-latest
@@ -27,9 +27,9 @@ jobs:
         with:
           script: |
             const Pr_Number = core.getInput('Pr_Number');
-            const Cytric_Version = core.getInput('Cytric_Version');
-            const Search_Version = core.getInput('Search_Version');
-            const Repository = core.getInput('Repository');
+            # const Cytric_Version = core.getInput('Cytric_Version');
+            # const Search_Version = core.getInput('Search_Version');
+            # const Repository = core.getInput('Repository');
             
             // Fetch the pull request details
             const { data: pullRequest } = await github.rest.pulls.get({
@@ -39,8 +39,10 @@ jobs:
             });
  
             // Construct the new body for the PR
-            const newBody = `${pullRequest.body}\n\nUpdated Cytric_Version: ${Cytric_Version}\nUpdated SearchApp_Version: ${Search_Version}\nUpdated Repository: ${Repository}`;
+            //const newBody = `${pullRequest.body}\n\nUpdated Cytric_Version: ${Cytric_Version}\nUpdated SearchApp_Version: ${Search_Version}\nUpdated Repository: ${Repository}`;
+            const newBody = `${pullRequest.body}\n\nUpdated Cytric_Version: PR_number`;
             
+            // Update the pull request body
             // Update the pull request body
             await github.rest.pulls.update({
               owner: context.repo.owner,
