--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -19,8 +19,8 @@ jobs:
   update-pr-body:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      # - name: Checkout Code
+      #   uses: actions/checkout@v3
 
       - name: Print PR Number
         run: echo "The Pull Request Number is ${{ github.event.inputs.Pr_Number }}"
